--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  min-width: 320px;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 body {
   margin: 0;
   display: flex;
